--- a/index.html
+++ b/index.html
@@ -59,8 +59,17 @@
         <h2>Lorem, ipsum dolor.</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis rem corporis ut repudiandae iure tenetur ullam ducimus blanditiis enim ea velit itaque, sint ipsam reprehenderit magni saepe rerum optio expedita.
         </p>
-
+        <br>
+        <br>
+        <br>
         
+
+        <ul style="list-style: none;">
+        <li><svg style="display:inline-block;vertical-align:middle" viewBox="0 0 24 24" height="20" width="20" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg> Flashlight</li>
+        <li><svg style="display:inline-block;vertical-align:middle" viewBox="0 0 24 24" height="20" width="20" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg> Mirror (or a shiny/reflective surface)</li>
+        <li><svg style="display:inline-block;vertical-align:middle" viewBox="0 0 24 24" height="20" width="20" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>Thick paper or cardboard</li>
+        <li><svg style="display:inline-block;vertical-align:middle" viewBox="0 0 24 24" height="20" width="20" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>Pencil (or an object you can poke a hole with) REMEMBER TO ASK A GROWN-UP FOR HELP!</li>
+    </ul>
     </div>
 </body>
 </html>
